--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <title>Pixel Art Maker!</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Monoton">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Monoton">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="designs.js"></script>
+    <meta charset="UTF-8">
+    
 </head>
 <body>
     <h1>Lab: Pixel Art Maker</h1>
@@ -21,7 +25,12 @@
     <input type="color" id="colorPicker">
 
     <h2>Design Canvas</h2>
-    <table id="pixel_canvas"></table>
+    <table id="pixel_canvas">
+    </table>
+    
+    <div id="extras-buttons">
+        <button id="erase-grid-button">Erase Grid</button>
+    </div>
 
     <script src="designs.js"></script>
 </body>
