--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <title>Pixel Art Maker!</title>
+    <meta name="author" content="Raphael Ferrand">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Monoton">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -19,13 +20,18 @@
     <div id="grid-setting-panel" class="white-div , tool-div">
         <h2>Choose Grid Size</h2>
         <form id="sizePicker">
-            Grid Height:
-            <input type="number" id="input_height" name="height" min="1" value="1">
-            Grid Width:
-            <input type="number" id="input_width" name="width" min="1" value="1">
-                Background color
-                <input type="color" id="colorBackground" value="#ffffff">
-            <input type="submit" id="grid-submit-button">
+            <div>
+                Grid Height:<input type="number" id="input_height" name="height" min="1" value="1">
+            </div>
+            <div>
+                Grid Width:<input type="number" id="input_width" name="width" min="1" value="1">
+            </div>
+            <div>
+                Background color<input type="color" id="colorBackground" value="#ffffff">
+            </div>
+            <div>
+                <input type="submit" id="grid-submit-button">
+            </div>
         </form>
         <div id="color-picker-div">
             <h2>Pick a Color to paint</h2>
